--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Indy Turnover Pros</title>
+</head>
+<body>
+  <h1>Welcome to Indy Turnover Pros</h1>
+  <p>Professional apartment turnover cleaning and restoration in Indianapolis.</p>
+  <p>Contact us at <a href="mailto:john@indyturnoverpros.com">john@indyturnoverpros.com</a></p>
+</body>
+</html>
 
