--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 <body>
   <h1>Welcome to Indy Turnover Pros</h1>
   <p>Professional apartment turnover cleaning and restoration in Indianapolis.</p>
-  <p>Contact us at <a href="mailto:john@indyturnoverpros.com">john@indyturnoverpros.com</a></p>
+  <p>
+    Contact us at
+    <a href="mailto:john@indyturnoverpros.com">john@indyturnoverpros.com</a>
+    or
+    <a href="mailto:su@indyturnoverpros.com">su@indyturnoverpros.com</a>
+  </p>
 </body>
 </html>
 
