--- a/index.html
+++ b/index.html
@@ -1,19 +1,164 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Indy Turnover Pros</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Indy Turnover Pros — Reliable. Transparent. Hassle Free.</title>
+  <meta name="description" content="Professional apartment & rental turnover cleaning in Indianapolis. Reliable, transparent, and hassle free."/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: { sans: ['Inter', 'ui-sans-serif', 'system-ui'] },
+          colors: {
+            brand: { 500: '#3c8bff', 400: '#5aa5ff' },
+            night: '#0b1220'
+          }
+        }
+      }
+    }
+  </script>
+  <style>
+    :root { color-scheme: dark; }
+  </style>
 </head>
-<body>
-  <h1>Welcome to Indy Turnover Pros</h1>
-  <p>Professional apartment turnover cleaning and restoration in Indianapolis.</p>
-  <p>
-    Contact us at
-    <a href="mailto:john@indyturnoverpros.com">john@indyturnoverpros.com</a>
-    or
-    <a href="mailto:su@indyturnoverpros.com">su@indyturnoverpros.com</a>
-  </p>
+<body class="bg-night text-white font-sans antialiased">
+  <!-- NAVBAR -->
+  <header class="sticky top-0 bg-night/80 border-b border-white/10 z-40">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8 flex justify-between py-4">
+      <a href="#home" class="flex items-center gap-3">
+        <img src="logo.png" alt="Indy Turnover Pros Logo" class="h-9 w-auto" />
+        <span class="text-xl font-extrabold tracking-tight">Indy Turnover Pros</span>
+      </a>
+      <nav class="hidden md:flex items-center gap-8 text-sm">
+        <a href="#services">Services</a>
+        <a href="#process">How it Works</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <section id="home" class="py-20 lg:py-28">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-2 gap-12 items-center">
+      <div>
+        <h1 class="text-5xl font-black leading-tight tracking-tight">
+          Turnovers made <span class="text-brand-400">simple</span>, 
+          move‑ins made <span class="text-brand-400">seamless</span>.
+        </h1>
+        <p class="mt-6 text-white/70 text-lg max-w-xl">We prepare rentals for the next tenant with dependable cleaning and finishing services. No hidden fees, just straightforward quality work.</p>
+      </div>
+      <div>
+        <img src="logo.png" alt="Indy Turnover Pros Logo" class="mx-auto w-full max-w-md" />
+      </div>
+    </div>
+  </section>
+
+  <!-- SERVICES -->
+  <section id="services" class="py-20 lg:py-28">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8">
+      <div class="max-w-2xl">
+        <h2 class="text-3xl sm:text-4xl font-extrabold">Services</h2>
+        <p class="mt-3 text-white/70">Built for property managers and owners who need units turned quickly—with crystal‑clear scopes and no hidden fees.</p>
+      </div>
+
+      <div class="mt-10 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+        <!-- Standard Turnover Package -->
+        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
+          <div class="text-lg font-semibold">Standard Turnover Package</div>
+          <p class="mt-2 text-white/70">Our every‑time, move‑in ready clean. Custom quote. <span class="text-white/80 font-semibold">No add‑on gimmicks—fridge & oven included.</span></p>
+          <ul class="mt-4 space-y-1 text-sm text-white/60 list-disc list-inside">
+            <li><span class="font-semibold">Kitchen:</span> fridge, oven, microwave, counters, exterior cabinet faces, sink & fixtures</li>
+            <li><span class="font-semibold">Bathrooms:</span> toilets, showers/tubs, sinks, mirrors, floors</li>
+            <li><span class="font-semibold">Bedrooms & Living:</span> vacuum, mop, light dusting of baseboards & blinds</li>
+            <li><span class="font-semibold">Final Walkthrough:</span> unit presented move‑in ready</li>
+          </ul>
+        </div>
+
+        <!-- Deep Clean & Detail Add‑Ons -->
+        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
+          <div class="text-lg font-semibold">Deep Clean & Detail Add‑Ons</div>
+          <p class="mt-2 text-white/70">Upgrade when a unit needs extra attention.</p>
+          <ul class="mt-4 space-y-1 text-sm text-white/60 list-disc list-inside">
+            <li>Window tracks/rails & sills detailed</li>
+            <li>Inside cabinets & drawers</li>
+            <li>Baseboard scrub & door/frame wipe‑downs</li>
+            <li>Grout & hard‑water detail</li>
+            <li>Appliance pull‑out clean (behind/under)</li>
+            <li>Odor neutralization/sanitizing</li>
+          </ul>
+        </div>
+
+        <!-- Punch-List Detailing -->
+        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
+          <div class="text-lg font-semibold">Punch‑List Detailing</div>
+          <p class="mt-2 text-white/70">The little things that slow move‑ins—handled.</p>
+          <ul class="mt-4 space-y-1 text-sm text-white/60 list-disc list-inside">
+            <li>Light caulk & paint touch‑ups</li>
+            <li>Fixture shining & plate/switch wipe‑downs</li>
+            <li>Final photo documentation</li>
+          </ul>
+        </div>
+      </div>
+
+      <!-- Additional Programs tailored for PMs -->
+      <div class="mt-6 grid gap-6 sm:grid-cols-2 lg:grid-cols-2">
+        <!-- Carpet Cleaning Standalone -->
+        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
+          <div class="text-lg font-semibold">Carpet Cleaning (Standalone)</div>
+          <p class="mt-2 text-white/70">Professional extraction for traffic lanes, bedrooms, and living areas. Schedule alone or bundle with any turnover service.</p>
+        </div>
+        <!-- Common Areas Program -->
+        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
+          <div class="text-lg font-semibold">Common Areas Program</div>
+          <p class="mt-2 text-white/70">Recurring or on‑demand cleaning for hallways, entryways, stairwells, mailrooms, and shared amenities.</p>
+          <ul class="mt-4 space-y-1 text-sm text-white/60 list-disc list-inside">
+            <li>Light fixtures, switches, & trim</li>
+            <li>Doors, railings, hand‑touch surfaces</li>
+            <li>Closets, vestibules, and lobby glass (as scoped)</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- CONTACT -->
+  <section id="contact" class="py-20 lg:py-28">
+    <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-3 gap-10">
+      <div class="lg:col-span-2">
+        <h2 class="text-3xl font-extrabold">Get a Quote</h2>
+        <form class="mt-8 grid gap-4 sm:grid-cols-2" action="mailto:john@indyturnoverpros.com" method="post" enctype="text/plain">
+          <input required name="name" placeholder="Your name" class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
+          <input required type="email" name="email" placeholder="Your email" class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
+          <textarea required name="details" rows="5" placeholder="Unit details, add‑ons, notes…" class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3"></textarea>
+          <button type="submit" class="sm:col-span-2 rounded-2xl bg-brand-500 px-6 py-3 font-semibold hover:bg-brand-400">Email My Request</button>
+        </form>
+      </div>
+      <div>
+        <div class="rounded-3xl border border-white/10 bg-white/5 p-6">
+          <div class="text-lg font-bold">Contact</div>
+          <div class="mt-4 space-y-4 text-sm">
+            <div>
+              <div class="font-semibold">John — Admin / Client Relations</div>
+              <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">john@indyturnoverpros.com</a>
+            </div>
+            <div>
+              <div class="font-semibold">Su — Field Manager</div>
+              <a href="mailto:su@indyturnoverpros.com" class="text-brand-400">su@indyturnoverpros.com</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <footer class="border-t border-white/10 py-10 text-center text-white/60 text-sm">© <span id="y"></span> Indy Turnover Pros</footer>
+  <script>document.getElementById('y').textContent = new Date().getFullYear()</script>
 </body>
 </html>
+
 
