--- a/index.html
+++ b/index.html
@@ -79,19 +79,23 @@
           </ul>
         </div>
 
-        <!-- Deep Clean & Detail Add‑Ons -->
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
-          <div class="text-lg font-semibold">Deep Clean & Detail Add‑Ons</div>
-          <p class="mt-2 text-white/70">Upgrade when a unit needs extra attention.</p>
-          <ul class="mt-4 space-y-1 text-sm text-white/60 list-disc list-inside">
-            <li>Window tracks/rails & sills detailed</li>
-            <li>Inside cabinets & drawers</li>
-            <li>Baseboard scrub & door/frame wipe‑downs</li>
-            <li>Grout & hard‑water detail</li>
-            <li>Appliance pull‑out clean (behind/under)</li>
-            <li>Odor neutralization/sanitizing</li>
-          </ul>
-        </div>
+       <!-- Carpet Cleaning Standalone -->
+<div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
+  <div class="text-lg font-semibold">Carpet Cleaning (Standalone)</div>
+  <p class="mt-2 text-white/70">
+    Professional extraction for traffic lanes, bedrooms, and living areas. 
+    Schedule alone or bundle with any turnover service.
+  </p>
+
+  <ul class="mt-4 space-y-1 text-sm text-white/60 list-disc list-inside">
+    <li>Living rooms, bedrooms, and closets</li>
+    <li>Heavy-traffic lane pre-treatment</li>
+    <li>Hallways & transitions</li>
+    <li>Stairways (treads & risers)</li>
+    <li>Edge detailing along baseboards</li>
+    <li>Spot treatment (as scoped)</li>
+  </ul>
+</div>
 
         <!-- Punch-List Detailing -->
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
