--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
         </p>
       </div>
 
+      <!-- FIRST GRID → 3 CARDS -->
       <div class="mt-10 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+
         <!-- Standard Turnover Package -->
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
           <div class="text-lg font-semibold">Standard Turnover Package</div>
@@ -112,10 +114,12 @@
             <li>Final photo documentation</li>
           </ul>
         </div>
-      </div>
 
-      <!-- Additional Programs -->
+      </div> <!-- END FIRST GRID -->
+
+      <!-- SECOND GRID → Carpet Cleaning + Common Areas -->
       <div class="mt-6 grid gap-6 sm:grid-cols-2 lg:grid-cols-2">
+
         <!-- Carpet Cleaning Standalone -->
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
           <div class="text-lg font-semibold">Carpet Cleaning (Standalone)</div>
@@ -145,9 +149,12 @@
             <li>Closets, vestibules, and lobby glass (as scoped)</li>
           </ul>
         </div>
-      </div>
+
+      </div> <!-- END SECOND GRID -->
+
     </div>
   </section>
+
 
   <!-- CONTACT -->
   <section id="contact" class="py-20 lg:py-28">
