--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
         <span class="text-xl font-extrabold tracking-tight">Indy Turnover Pros</span>
       </a>
       <nav class="hidden md:flex items-center gap-8 text-sm">
-        <a href="#services">Services</a>
-        <a href="#process">How it Works</a>
-        <a href="#contact">Contact</a>
-      </nav>
+  <a href="#services">Services</a>
+  <a href="carpet-cleaning.html">Carpet Cleaning</a>
+  <a href="#contact">Contact</a>
+</nav>
+
     </div>
   </header>
 
