--- a/index.html
+++ b/index.html
@@ -157,48 +157,95 @@
   </section>
 
 
-  <!-- CONTACT -->
+    <!-- CONTACT -->
   <section id="contact" class="py-20 lg:py-28">
     <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-3 gap-10">
+      <!-- FORM -->
       <div class="lg:col-span-2">
         <h2 class="text-3xl font-extrabold">Get a Quote</h2>
-       <form action="https://api.web3forms.com/submit" method="POST">
-  <!-- REQUIRED: your Web3Forms access key -->
-  <input type="hidden" name="access_key" value="91e026bb-cbfc-412e-bfbe-2adac71ae37c">
+        <p class="mt-3 text-white/70 text-sm sm:text-base max-w-xl">
+          Tell us a little about the unit or property and we’ll follow up with a clear,
+          no-nonsense quote.
+        </p>
 
-  <!-- Optional: subject line -->
-  <input type="hidden" name="subject" value="New Indy Turnover Pros Inquiry">
+        <div class="mt-6 rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl">
+          <form action="https://api.web3forms.com/submit"
+                method="POST"
+                class="grid gap-6 sm:grid-cols-2">
 
- 
+            <!-- REQUIRED: your Web3Forms access key -->
+            <input type="hidden" name="access_key" value="91e026bb-cbfc-412e-bfbe-2adac71ae37c">
+            <!-- Optional: subject line -->
+            <input type="hidden" name="subject" value="New Indy Turnover Pros Inquiry">
 
-  <label>
-    Your Name:
-    <input type="text" name="name" required>
-  </label>
+            <!-- Name -->
+            <div>
+              <label class="block text-sm font-medium text-white/80">
+                Your Name
+              </label>
+              <input
+                type="text"
+                name="name"
+                required
+                class="mt-2 block w-full rounded-2xl bg-white/5 border border-white/15 px-3 py-2.5 text-sm text-white placeholder-white/40
+                       focus:outline-none focus:ring-2 focus:ring-brand-400 focus:border-brand-400"
+                placeholder="Property manager, owner, or contact person">
+            </div>
 
-  <label>
-    Your Email:
-    <input type="email" name="email" required>
-  </label>
+            <!-- Email -->
+            <div>
+              <label class="block text-sm font-medium text-white/80">
+                Your Email
+              </label>
+              <input
+                type="email"
+                name="email"
+                required
+                class="mt-2 block w-full rounded-2xl bg-white/5 border border-white/15 px-3 py-2.5 text-sm text-white placeholder-white/40
+                       focus:outline-none focus:ring-2 focus:ring-brand-400 focus:border-brand-400"
+                placeholder="you@company.com">
+            </div>
 
-  <label>
-    Job Details:
-    <textarea name="details" rows="5" required></textarea>
-  </label>
+            <!-- Job Details -->
+            <div class="sm:col-span-2">
+              <label class="block text-sm font-medium text-white/80">
+                Job Details
+              </label>
+              <textarea
+                name="details"
+                rows="4"
+                required
+                class="mt-2 block w-full rounded-2xl bg-white/5 border border-white/15 px-3 py-2.5 text-sm text-white placeholder-white/40
+                       focus:outline-none focus:ring-2 focus:ring-brand-400 focus:border-brand-400"
+                placeholder="e.g. 24-unit building, 2–4 turns per month, mix of 1–2BR, carpets in bedrooms only, etc."></textarea>
+            </div>
 
-  <button type="submit">Send Message</button>
-</form>
-
-
+            <!-- Button -->
+            <div class="sm:col-span-2 flex items-center justify-between gap-4">
+              <button
+                type="submit"
+                class="inline-flex items-center justify-center rounded-2xl bg-brand-500 px-5 py-2.5 text-sm font-semibold text-night
+                       hover:bg-brand-400 transition">
+                Send Message
+              </button>
+              <p class="text-xs text-white/50">
+                We typically respond within one business day.
+              </p>
+            </div>
+          </form>
+        </div>
       </div>
 
+      <!-- CONTACT CARD -->
       <div>
         <div class="rounded-3xl border border-white/10 bg-white/5 p-6">
           <div class="text-lg font-bold">Contact</div>
           <div class="mt-4 space-y-4 text-sm">
             <div>
               <div class="font-semibold">John — Admin / Client Relations</div>
-              <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">john@indyturnoverpros.com</a>
+              <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">
+                john@indyturnoverpros.com
+              </a>
             </div>
           </div>
         </div>
@@ -206,6 +253,7 @@
 
     </div>
   </section>
+
 
   <footer class="border-t border-white/10 py-10 text-center text-white/60 text-sm">
     © <span id="y"></span> Indy Turnover Pros
