--- a/carpet-cleaning.html
+++ b/carpet-cleaning.html
@@ -1,291 +1,104 @@
-<!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Carpet Cleaning — Indy Turnover Pros</title>
-  <meta name="description" content="Professional carpet cleaning in Indianapolis. 3-room $159 special for up to 600 sq ft. Traffic lanes, bedrooms, stairs, spot treatment, and more." />
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-
-  <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          fontFamily: { sans: ['Inter', 'ui-sans-serif', 'system-ui'] },
-          colors: {
-            brand: { 500: '#3c8bff', 400: '#5aa5ff' },
-            night: '#0b1220'
-          }
-        }
-      }
-    }
-  </script>
-
-  <style>
-    :root { color-scheme: dark; }
-  </style>
-</head>
-
-<body class="bg-night text-white font-sans antialiased">
-
-  <!-- NAVBAR -->
-  <header class="sticky top-0 bg-night/80 border-b border-white/10 z-40">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8 flex justify-between py-4">
-      <a href="index.html" class="flex items-center gap-3">
-        <img src="logo.png" alt="Indy Turnover Pros Logo" class="h-9 w-auto" />
-        <span class="text-xl font-extrabold tracking-tight">Indy Turnover Pros</span>
-      </a>
-
-      <nav class="hidden md:flex items-center gap-8 text-sm">
-        <a href="index.html#services">Services</a>
-        <a href="carpet-cleaning.html" class="text-brand-400 font-semibold">Carpet Cleaning</a>
-        <a href="index.html#contact">Contact</a>
-      </nav>
-    </div>
-  </header>
-
-  <!-- HERO -->
-  <section class="py-20 lg:py-28">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-2 gap-12 items-center">
-      <div>
-        <h1 class="text-5xl font-black leading-tight tracking-tight">
-          Professional <span class="text-brand-400">Carpet Cleaning</span>
-          for Homes & Rentals
-        </h1>
-        <p class="mt-6 text-white/70 text-lg max-w-xl">
-          Deep extraction cleaning for traffic lanes, bedrooms, stairs, and move-in / move-out units.
-          Fast scheduling, clear pricing, and dependable results every time.
-        </p>
-      </div>
-      <div>
-        <img src="logo.png" alt="Carpet Cleaning" class="mx-auto w-full max-w-md opacity-90" />
-      </div>
-    </div>
-  </section>
-
-  <!-- WHAT WE CLEAN -->
-  <section class="py-20 lg:py-28" id="services">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8">
-
-      <h2 class="text-3xl sm:text-4xl font-extrabold">Carpet Cleaning Services</h2>
+<section id="contact" class="py-20 lg:py-28">
+  <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-3 gap-10">
+    <div class="lg:col-span-2">
+      <h2 class="text-3xl font-extrabold">
+        Schedule Your $159 — 3-Room Carpet Cleaning
+      </h2>
       <p class="mt-3 text-white/70 max-w-xl">
-        Built for homeowners, landlords, and property managers needing fast, reliable carpet cleaning.
+        Special includes up to <strong>3 rooms</strong> and up to 
+        <strong>600 total square feet</strong>. Additional rooms, stairs, and pet issues will be quoted separately.
       </p>
 
-      <div class="mt-10 grid gap-6 sm:grid-cols-2 lg:grid-cols-3">
+      <form
+        class="mt-8 grid gap-4 sm:grid-cols-2"
+        action="mailto:john@indyturnoverpros.com"
+        method="post"
+        enctype="text/plain"
+      >
+        <!-- Basic Info -->
+        <input required name="name" placeholder="Your name"
+          class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
+        
+        <input required type="email" name="email" placeholder="Your email"
+          class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
 
-        <!-- Traffic Lanes -->
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
-          <div class="text-lg font-semibold">Traffic Lane Restoration</div>
-          <p class="mt-2 text-white/70">Hot water extraction to lift dirt and flatten patterns from heavy foot traffic.</p>
-        </div>
+        <input required name="phone" placeholder="Mobile phone (for confirmation text)"
+          class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
 
-        <!-- Bedrooms -->
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
-          <div class="text-lg font-semibold">Bedrooms & Living Areas</div>
-          <p class="mt-2 text-white/70">Full-room extraction for fresh, clean carpets before move-in.</p>
-        </div>
+        <!-- Address -->
+        <input required name="address" placeholder="Service address (street, unit #)"
+          class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3" />
 
-        <!-- Stairs -->
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
-          <div class="text-lg font-semibold">Stairways (Treads & Risers)</div>
-          <p class="mt-2 text-white/70">Precision cleaning on each stair tread and riser for a uniform finish.</p>
-        </div>
+        <!-- Yes / No Add-Ons -->
+        <select name="additional_rooms"
+          class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 sm:col-span-2">
+          <option value="" disabled selected>Any additional rooms beyond the 3 included?</option>
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+        </select>
 
-        <!-- Hallways -->
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
-          <div class="text-lg font-semibold">Hallways & Transitions</div>
-          <p class="mt-2 text-white/70">High-traffic connectors cleaned thoroughly end-to-end.</p>
-        </div>
+        <select name="stairs"
+          class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 sm:col-span-2">
+          <option value="" disabled selected>Stairs to be cleaned?</option>
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+        </select>
 
-        <!-- Baseboards -->
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
-          <div class="text-lg font-semibold">Edge & Baseboard Detailing</div>
-          <p class="mt-2 text-white/70">Crevice tool deep cleans carpet edges and along baseboards.</p>
-        </div>
+        <select name="pet_stains"
+          class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 sm:col-span-2">
+          <option value="" disabled selected>Pet stains or odor issues?</option>
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+        </select>
 
-        <!-- Spot Treatment -->
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6 shadow-xl hover:shadow-glow transition">
-          <div class="text-lg font-semibold">Spot Treatment</div>
-          <p class="mt-2 text-white/70">Targeted stain removal & deodorizing (as scoped).</p>
-        </div>
+        <!-- Preferred Date & Time -->
+        <input
+          required
+          type="date"
+          name="preferred_date"
+          class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 sm:col-span-2"
+        />
 
-      </div>
-    </div>
-  </section>
-
-  <!-- CONTACT / QUOTE SECTION -->
-  <section id="contact" class="py-20 lg:py-28">
-    <div class="mx-auto max-w-7xl px-6 lg:px-8 grid lg:grid-cols-3 gap-10">
-      <div class="lg:col-span-2">
-        <h2 class="text-3xl font-extrabold">Schedule Your $159 — 3-Room Carpet Cleaning</h2>
-        <p class="mt-3 text-white/70 max-w-xl">
-          Special includes up to 3 rooms or up to 600 sq ft. Additional rooms, stairs, and heavy pet treatments are quoted separately.
-        </p>
-
-        <form
-          class="mt-8 grid gap-4 sm:grid-cols-2"
-          action="mailto:john@indyturnoverpros.com"
-          method="post"
-          enctype="text/plain"
+        <select
+          name="preferred_time"
+          class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 sm:col-span-2"
+          required
         >
-          <!-- Contact info -->
-          <input
-            required
-            name="name"
-            placeholder="Your name"
-            class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          />
+          <option value="" disabled selected>Select preferred time window</option>
+          <option value="Morning (8 AM – 12 PM)">Morning (8 AM – 12 PM)</option>
+          <option value="Afternoon (12 PM – 4 PM)">Afternoon (12 PM – 4 PM)</option>
+          <option value="Evening (4 PM – 8 PM)">Evening (4 PM – 8 PM)</option>
+        </select>
 
-          <input
-            required
-            type="email"
-            name="email"
-            placeholder="Your email"
-            class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          />
+        <!-- Notes -->
+        <textarea name="notes" rows="4"
+          placeholder="Anything else we should know? (Parking, large furniture, heavy staining, etc.)"
+          class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3"></textarea>
 
-          <input
-            required
-            name="phone"
-            placeholder="Mobile phone (for confirmation text)"
-            class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          />
+        <button type="submit"
+          class="sm:col-span-2 rounded-2xl bg-brand-500 px-6 py-3 font-semibold hover:bg-brand-400">
+          Submit My $159 Cleaning Request
+        </button>
+      </form>
+    </div>
 
-          <!-- Address -->
-          <input
-            required
-            name="address"
-            placeholder="Service address (street, unit #)"
-            class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          />
+    <div>
+      <div class="rounded-3xl border border-white/10 bg-white/5 p-6">
+        <div class="text-lg font-bold">Contact</div>
 
-          <!-- Rooms & extras -->
-          <div class="grid gap-4 sm:grid-cols-2 sm:col-span-2">
-            <select
-              name="rooms_included"
-              class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 w-full"
-            >
-              <option value="" disabled selected>
-                Rooms included in $159 special (up to 3)
-              </option>
-              <option value="1 room">1 room</option>
-              <option value="2 rooms">2 rooms</option>
-              <option value="3 rooms">3 rooms</option>
-            </select>
-
-            <select
-              name="extra_rooms"
-              class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 w-full"
-            >
-              <option value="" disabled selected>
-                Any additional rooms?
-              </option>
-              <option value="No extra rooms">No extra rooms</option>
-              <option value="1 extra room">1 extra room</option>
-              <option value="2 extra rooms">2 extra rooms</option>
-              <option value="3+ extra rooms">3+ extra rooms</option>
-            </select>
+        <div class="mt-4 space-y-4 text-sm">
+          <div>
+            <div class="font-semibold">John — Admin / Client Relations</div>
+            <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">
+              john@indyturnoverpros.com
+            </a>
           </div>
-
-          <!-- Stairs & pets -->
-          <div class="grid gap-4 sm:grid-cols-2 sm:col-span-2">
-            <select
-              name="stairs"
-              class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 w-full"
-            >
-              <option value="" disabled selected>
-                Stairs to be cleaned?
-              </option>
-              <option value="No stairs">No stairs</option>
-              <option value="1 flight of stairs">1 flight of stairs</option>
-              <option value="2+ flights of stairs">2+ flights of stairs</option>
-            </select>
-
-            <select
-              name="pet_stains"
-              class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 w-full"
-            >
-              <option value="" disabled selected>
-                Pet stains / odors?
-              </option>
-              <option value="No pet issues">No pet issues</option>
-              <option value="A few spots">A few spots</option>
-              <option value="Heavy pet stains / odor">Heavy pet stains / odor</option>
-            </select>
-          </div>
-
-          <!-- Preferred time -->
-          <div class="grid gap-4 sm:grid-cols-2 sm:col-span-2">
-            <input
-              required
-              type="date"
-              name="preferred_date"
-              class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 w-full"
-            />
-
-            <select
-              name="preferred_time"
-              class="rounded-2xl border border-white/10 bg-white/5 px-4 py-3 w-full"
-            >
-              <option value="" disabled selected>
-                Preferred time window
-              </option>
-              <option value="Flexible">Flexible</option>
-              <option value="Morning (8–12)">Morning (8–12)</option>
-              <option value="Afternoon (12–4)">Afternoon (12–4)</option>
-              <option value="Evening (4–7)">Evening (4–7)</option>
-            </select>
-          </div>
-
-          <!-- Extra details -->
-          <textarea
-            name="notes"
-            rows="4"
-            placeholder="Anything else we should know? (parking, large furniture, previous cleaning, special concerns, etc.)"
-            class="sm:col-span-2 rounded-2xl border border-white/10 bg-white/5 px-4 py-3"
-          ></textarea>
-
-          <button
-            type="submit"
-            class="sm:col-span-2 rounded-2xl bg-brand-500 px-6 py-3 font-semibold hover:bg-brand-400"
-          >
-            Submit My $159 Cleaning Request
-          </button>
-        </form>
-      </div>
-
-      <div>
-        <div class="rounded-3xl border border-white/10 bg-white/5 p-6">
-          <div class="text-lg font-bold">Contact</div>
-
-          <div class="mt-4 space-y-4 text-sm">
-            <div>
-              <div class="font-semibold">John — Admin / Client Relations</div>
-              <a href="mailto:john@indyturnoverpros.com" class="text-brand-400">
-                john@indyturnoverpros.com
-              </a>
-            </div>
-          </div>
-
         </div>
+
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
-  <footer class="border-t border-white/10 py-10 text-center text-white/60 text-sm">
-    © <span id="y"></span> Indy Turnover Pros
-  </footer>
-
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear()
-  </script>
-
-</body>
-</html>
 
 
